--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src= "http://player.twitch.tv/js/embed/v1.js"></script>
-  </head>
   <body>
-    <div id="PLAYER_DIV_ID"></div>
-    <script type="text/javascript">
-        var options = {
-            width: 854,
-            height: 480,
-            video: "v53336925",
-            parent: [""]
-        };
-        var player = new Twitch.Player("PLAYER_DIV_ID", options);
-        player.setVolume(0.5);
-    </script>
+    <h1>HELLO</h1>
   </body>
 </html>
